# final-gram

./: .env  Dockerfile  README.md  Test.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/bot/handlers/: __init__.py  admin.py  advertise.py  checks.py  common.py  earn.py  menu.py  payments.py  profile.py  referral.py  settings.py
app/bot/keyboards/: admin.py  checks.py  payments.py  referral.py
app/bot/middlewares/: auth.py  subscription.py
app/bot/states/: admin_states.py
app/bot/utils/: messages.py
app/cli/: database.py
app/config/: settings.py
app/database/: database.py
app/database/models/: __init__.py  check.py  required_subscription.py  task.py  task_execution.py  transaction.py  user.py  user_settings.py
app/services/: cryptobot_service.py  settings_service.py  subscription_check.py  subscription_service.py  task_service.py  telegram_api_service.py  user_service.py
migrations/: env.py
