[tool.poetry]
name = "pr-gram-bot"
version = "1.0.0"
description = "PR GRAM Telegram Bot - взаимное продвижение каналов"
authors = ["PR GRAM Team <support@prgram.bot>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
tenacity = "^8.2.3"
typer = "^0.9.0"
aiohttp = "^3.9.1"
sentry-sdk = {extras = ["sqlalchemy"], version = "^1.38.0"}
prometheus-client = "^0.19.0"
cryptography = "^41.0.8"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
prgram-cli = "app.cli.database:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "redis.*",
    "alembic.*",
    "structlog.*"
]
ignore_missing_imports = true